writing notes and essays

--- a/src/pages/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/pages/thoughts/taking-notes-to-the-next-level.mdx
@@ -6,31 +6,29 @@ lastEdited: 31.08.2022
 tags: ["note-taking"]
 ---
 
-My brain loves reading the internet. Each time I unearth a nugget of information, my brain gets a little hit.
-
-_Ding_ Mmm tasty information morsel.
+My brain loves the internet. Each time I unearth a nugget of information, my brain lights up.
 
 I might bookmark the page, or favourite the post. But my hunger isn't satisfied and I rarely return to it once I've read it the first time. My brain is an info-junky. I carry on scrolling.
 
-## smashing ideas together
-
-Sometimes, I'll be reading something, and my brain makes a connection with some other thing. This is when I get a bigger hit.
-
-_Kaboom_ a taste explosion!
-
-Like two atoms being smashed together in a particle accelerator, the constitutional sub-atomic ideas fizz and arc around and briefly fuse together in novel ways in my brain. It's a buzz alright but unless I write this eureka moment down, it fades out of existence and ultimately it's just another dopamine moment.
-
 ## connecting the dots
 
-This intuitive brain of mine often makes mental leaps, creating connections, integrating knowledge and solving puzzles. I want to harness this super-power and I think I've found how.
+My intuitive brain loves creating connections, integrating knowledge and lightbulb moments. I want to harness this super-power and I think I've found how.
 
-## a new way of working
+When I read something or hear something interesting, I'm going to stop and take notes.
+
+By making a conscious decision to act on new information, we can prevent being sucked into an infinite scroll and turn insight into action.
+
+## a wiser way of working
 
 I recently read an email newsletter from @fronterablog which talked about how to move from consuming information to creating knowledge and ultimately wisdom.
 
-It argued that you forget most information you read or hear because you have limited attention. So the information that you consume matters. They recommended learning connected topics and using spaced repetition to remember what you learn.
+It argued that you forget most information you read or hear because you have limited attention.
 
-By remembering, understanding and reflecting on new information (building knowledge), we can form mental models and apply this knowledge to future decisions (wisdom).
+The information that you consume matters - you need a healthy diet.
+
+They recommended learning connected topics and using spaced repetition to remember what you learn.
+
+By understanding and reflecting on new information, we can build our knowledge, form mental models and apply this knowledge to future decisions.
 
 ## I'm creating a digital garden
 
@@ -38,18 +36,14 @@ What's a digital garden? Well, as opposed to a blog - which typically is a rever
 
 The notes can stay as crude notes, or they can be tended to, and nurtured into more rounded essays over time.
 
-This method would mean that I can overcome my perfectionist tendencies to create "finished" articles - just publishing anything is "good enough". Sowing the seeds is just the beginning.
+Sowing the seeds is just the beginning but because the objective is to publish notes, we avoid perfectionist tendencies. How many times have you avoided making mistakes at any cost, making it harder to reach get things done?
 
 Done is better than perfect.
 
 ## returning to tend to the garden
 
-To remember information, we understand from Feynman, that the key to learning a subject is to teach it to other people.
-
 Transforming ideas and notes to essays, explaining the core ideas and how they relate to each other in plain language is a great way to make sure that you truly understand a subject.
 
-There are a great number of people learning in the open. And the internet is wonderful open resource full of people just itching to tell you how wrong you are! Or at least give you feedback.
+And the internet is wonderful open resource full of people just itching to tell you their opinion. So <a href="/perfect-post">transforming notes to social media posts</a> and essays opens up the opportunity for feedback.
 
-## growing a repository of inter-connected ideas,
-
-By regularly building on ideas and soliciting feedback will help me retain knowledge and shape my ideas. By creating new mental-models that can add to decision making.
+If we regularly return to refine notes into a post, an essay or after good feedback, we get that spaced repetition that helps us remember and shape ideas.
