improving typography and correcting links

--- a/src/pages/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/pages/thoughts/taking-notes-to-the-next-level.mdx
@@ -14,7 +14,8 @@ I might bookmark the page, or favourite the post. But my hunger isn't satisfied 
 
 My intuitive brain loves creating connections, integrating knowledge and lightbulb moments. I want to harness this super-power and I think I've found how.
 
-When I read something or hear something interesting, I'm going to stop and take notes.
+<a href="./start-with-observations">Start with observations.</a> When I read something
+or hear something interesting, I'm going to stop and take notes.
 
 By making a conscious decision to act on new information, we can prevent being sucked into an infinite scroll and turn insight into action.
 
@@ -44,6 +45,6 @@ Done is better than perfect.
 
 Transforming ideas and notes to essays, explaining the core ideas and how they relate to each other in plain language is a great way to make sure that you truly understand a subject.
 
-And the internet is wonderful open resource full of people just itching to tell you their opinion. So <a href="/perfect-post">transforming notes to social media posts</a> and essays opens up the opportunity for feedback.
+And the internet is wonderful open resource full of people just itching to tell you their opinion. So <a href="./the-perfect-post">transforming notes to social media posts</a> and essays opens up the opportunity for feedback.
 
 If we regularly return to refine notes into a post, an essay or after good feedback, we get that spaced repetition that helps us remember and shape ideas.
