--- a/src/pages/thoughts/making-the-most-of-observations.mdx
+++ b/src/pages/thoughts/making-the-most-of-observations.mdx
@@ -1,6 +1,6 @@
 ---
 layout: ../../layouts/Layout.astro
-title: start with observations
+title: making the most of observations
 description: where to find inspiration for notes
 lastEdited: 31.08.2022
 tags: ["note-taking"]
