--- a/src/pages/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/pages/thoughts/taking-notes-to-the-next-level.mdx
@@ -8,43 +8,50 @@ tags: ["note-taking"]
 
 My brain loves the internet. Each time I unearth a nugget of information, my brain lights up.
 
-I might bookmark the page, or favourite the post. But my hunger isn't satisfied and I rarely return to it once I've read it the first time. My brain is an info-junky. I carry on scrolling.
+I might bookmark the page, or favourite the post. But my hunger isn't satisfied and I rarely return to it. My brain is an info-junky. I carry on scrolling.
 
-## connecting the dots
+My intuitive brain loves creating connections, integrating knowledge and sparking lightbulb moments. I want to harness this super-power and I think I've found how.
 
-My intuitive brain loves creating connections, integrating knowledge and lightbulb moments. I want to harness this super-power and I think I've found how.
+## Taking notes on new observations
 
-<a href="./start-with-observations">Start with observations.</a> When I read something
-or hear something interesting, I'm going to stop and take notes.
+When I read something thought provoking or hear something interesting, I'm going to stop and <a href="./making-the-most-of-observations">make the most of observations</a> by taking notes.
 
 By making a conscious decision to act on new information, we can prevent being sucked into an infinite scroll and turn insight into action.
 
-## a wiser way of working
+But why are these notes so useful?
 
-I recently read an email newsletter from @fronterablog which talked about how to move from consuming information to creating knowledge and ultimately wisdom.
+## A wiser way of working
 
-It argued that you forget most information you read or hear because you have limited attention.
+Most information you read or hear is forgotten. Why? Because we have limited attention and capacity to retain information.
 
-The information that you consume matters - you need a healthy diet.
+But note taking becomes more powerful if we reflect on what we've learned.
 
-They recommended learning connected topics and using spaced repetition to remember what you learn.
+Information is merely refined data. Knowledge, on the other hand, comes from awareness and understanding based on our own experiences.
 
-By understanding and reflecting on new information, we can build our knowledge, form mental models and apply this knowledge to future decisions.
+By exploring how our new information helps us see the world in a different light, we can upgrade our notes to a more personal and useful artifact.
+
+Once we have this knowledge, we can use it to affect future decisions and behaviour.
+
+So, here's my plan to remember and act on new information.
 
 ## I'm creating a digital garden
 
-What's a digital garden? Well, as opposed to a blog - which typically is a reverse chronological list of published articles, a garden is a bunch interconnected notes, and essays that the reader can peruse through links.
+As opposed to a blog, which is typically a reverse-chronological list of published articles, I'm creating a digital garden — a bunch of interconnected notes and essays that readers can peruse through links. It's how we naturally browse the internet.
 
-The notes can stay as crude notes, or they can be tended to, and nurtured into more rounded essays over time.
+Sowing the seeds of ideas in pure note form can be the end of it. Or I can nurture the notes into more rounded reflective essays over time.
 
-Sowing the seeds is just the beginning but because the objective is to publish notes, we avoid perfectionist tendencies. How many times have you avoided making mistakes at any cost, making it harder to reach get things done?
+Because the objective is to publish notes, I'll avoid my perfectionist tendencies.
+
+How many times have you avoided showing rough versions of your work, hiding mistakes, making it harder to finish what you've started?
 
 Done is better than perfect.
 
-## returning to tend to the garden
+## Returning to tend to the garden
 
-Transforming ideas and notes to essays, explaining the core ideas and how they relate to each other in plain language is a great way to make sure that you truly understand a subject.
+Explaining core ideas and how they relate to each other in plain language so that others can understand them is a great way to make sure that one truly understands a subject.
 
-And the internet is wonderful open resource full of people just itching to tell you their opinion. So <a href="./the-perfect-post">transforming notes to social media posts</a> and essays opens up the opportunity for feedback.
+By returning to read my notes regularly, and <a href="./the-perfect-post">transforming notes to social media posts</a> and reflective essays, it opens up the opportunity for feedback and improvement.
 
-If we regularly return to refine notes into a post, an essay or after good feedback, we get that spaced repetition that helps us remember and shape ideas.
+Using spaced repetition is a great way to remember what you learn.
+
+Because I keep coming back to the notes and refining them, I not only retain this new information better but by understanding and reflecting on new information, I can build my knowledge, form mental models and apply this knowledge to future decisions.
