--- a/src/pages/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/pages/thoughts/taking-notes-to-the-next-level.mdx
@@ -6,9 +6,9 @@ lastEdited: 31.08.2022
 tags: ["note-taking"]
 ---
 
-My brain loves the internet. Each time I unearth a nugget of information, my brain lights up.
+Our brain loves the internet. Each time we unearth a nugget of information, our brains lights up.
 
-I might bookmark the page, or favourite the post. But my hunger isn't satisfied and I rarely return to it. My brain is an info-junky. I carry on scrolling.
+We might bookmark the page, or favourite the post. But our hunger isn't satisfied and we rarely return to it. Our brains are info-junkies. We carry on scrolling.
 
 My intuitive brain loves creating connections, integrating knowledge and sparking lightbulb moments. I want to harness this super-power and I think I've found how.
 
@@ -34,13 +34,13 @@ Once we have this knowledge, we can use it to affect future decisions and behavi
 
 So, here's my plan to remember and act on new information.
 
-## I'm creating a digital garden
+## Create a digital garden
 
-As opposed to a blog, which is typically a reverse-chronological list of published articles, I'm creating a digital garden — a bunch of interconnected notes and essays that readers can peruse through links. It's how we naturally browse the internet.
+As opposed to a blog, which is typically a reverse-chronological list of published articles, a digital garden is a bunch of interconnected notes and essays that readers can peruse through links. It's how we naturally browse the internet.
 
-Sowing the seeds of ideas in pure note form can be the end of it. Or I can nurture the notes into more rounded reflective essays over time.
+Sowing the seeds of ideas in pure note form can be the end of it. Or we can nurture the notes into more rounded reflective essays over time.
 
-Because the objective is to publish notes, I'll avoid my perfectionist tendencies.
+Because the objective is to publish notes, we avoid perfectionist tendencies.
 
 How many times have you avoided showing rough versions of your work, hiding mistakes, making it harder to finish what you've started?
 
@@ -50,8 +50,8 @@ Done is better than perfect.
 
 Explaining core ideas and how they relate to each other in plain language so that others can understand them is a great way to make sure that one truly understands a subject.
 
-By returning to read my notes regularly, and <a href="./the-perfect-post">transforming notes to social media posts</a> and reflective essays, it opens up the opportunity for feedback and improvement.
+By returning to read your notes regularly, and <a href="./the-perfect-post">transforming notes to social media posts</a> and reflective essays, it opens up the opportunity for feedback and improvement.
 
 Using spaced repetition is a great way to remember what you learn.
 
-Because I keep coming back to the notes and refining them, I not only retain this new information better but by understanding and reflecting on new information, I can build my knowledge, form mental models and apply this knowledge to future decisions.
+Because we keep coming back to the notes and refining them, you not only retain this new information better but by understanding and reflecting on new information, you can build knowledge, form new mental models and apply this knowledge to future decisions.
