fix multiple h1 issue

--- a/src/pages/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/pages/thoughts/taking-notes-to-the-next-level.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/Layout.astro
-title: taking notes to the next level
-description: using a digital garden for cultivating wisdom
+title: Taking notes to the next level
+description: Using a digital garden for cultivating wisdom
 lastEdited: 31.08.2022
 tags: ["note-taking"]
 ---
