--- a/src/pages/thoughts/the-perfect-post.mdx
+++ b/src/pages/thoughts/the-perfect-post.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/Layout.astro
-title: the perfect post
-description: how to turn insight into a social media post
+title: The perfect post
+description: How to turn insight into a social media post
 lastEdited: 1.09.2023
 tags: ["note-taking"]
 ---
