--- a/src/pages/thoughts/making-the-most-of-observations.mdx
+++ b/src/pages/thoughts/making-the-most-of-observations.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/Layout.astro
-title: making the most of observations
-description: where to find inspiration for notes
+title: Making the most of observations
+description: Where to find inspiration for notes
 lastEdited: 31.08.2022
 tags: ["note-taking"]
 ---
