improving links and cards

--- a/src/pages/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/pages/thoughts/taking-notes-to-the-next-level.mdx
@@ -22,9 +22,7 @@ But why are these notes so useful?
 
 ## A wiser way of working
 
-Most information you read or hear is forgotten. Why? Because we have limited attention and capacity to retain information.
-
-But note taking becomes more powerful if we reflect on what we've learned.
+Note taking becomes more powerful if we reflect on what we've learned.
 
 Information is merely refined data. Knowledge, on the other hand, comes from awareness and understanding based on our own experiences.
 
@@ -36,22 +34,28 @@ So, here's my plan to remember and act on new information.
 
 ## Create a digital garden
 
-As opposed to a blog, which is typically a reverse-chronological list of published articles, a digital garden is a bunch of interconnected notes and essays that readers can peruse through links. It's how we naturally browse the internet.
+As opposed to a blog, which is typically a reverse-chronological list of published articles, I'm advocating creating a digital garden.
 
-Sowing the seeds of ideas in pure note form can be the end of it. Or we can nurture the notes into more rounded reflective essays over time.
+A digital garden is a bunch of interconnected notes and essays that readers can peruse through links. It's how we naturally browse the internet.
 
-Because the objective is to publish notes, we avoid perfectionist tendencies.
+Each time I find something interesting on the internet. I'm going to stop and make some notes and plant them in my digital garden.
+
+Sowing the seeds of ideas in pure note form can be the end of it. Or notes can be nutured into more rounded reflective essays over time.
 
 How many times have you avoided showing rough versions of your work, hiding mistakes, making it harder to finish what you've started?
 
 Done is better than perfect.
 
+But how do we retain and remember that information?
+
 ## Returning to tend to the garden
+
+Using spaced repetition is a great way to remember what you learn.
 
 Explaining core ideas and how they relate to each other in plain language so that others can understand them is a great way to make sure that one truly understands a subject.
 
-By returning to read your notes regularly, and <a href="./the-perfect-post">transforming notes to social media posts</a> and reflective essays, it opens up the opportunity for feedback and improvement.
+By regularly returning to read and <a href="./the-perfect-post">transforming notes for others to read</a>, we strenghen the ideas and reenforce that knowledge.
 
-Using spaced repetition is a great way to remember what you learn.
+And publishing the notes and essays opens them up to the opportunity for feedback and further improvement.
 
 Because we keep coming back to the notes and refining them, you not only retain this new information better but by understanding and reflecting on new information, you can build knowledge, form new mental models and apply this knowledge to future decisions.
