--- a/src/pages/thoughts/the-perfect-post.mdx
+++ b/src/pages/thoughts/the-perfect-post.mdx
@@ -6,6 +6,8 @@ lastEdited: 1.09.2023
 tags: ["note-taking"]
 ---
 
+Some notes on creating social media posts.
+
 - What is the outcome _you_ want?
 - How do you want your audience to feel?
 - What's the problem you're solving?
