--- a/src/pages/thoughts/how-to-create-the-perfect-post.mdx
+++ b/src/pages/thoughts/how-to-create-the-perfect-post.mdx
@@ -1,6 +1,6 @@
 ---
 layout: ../../layouts/Layout.astro
-title: The perfect post
+title: How to create the perfect post
 description: How to turn insight into a social media post
 lastEdited: 1.09.2023
 tags: ["note-taking"]
