--- a/src/pages/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/pages/thoughts/taking-notes-to-the-next-level.mdx
@@ -6,56 +6,50 @@ lastEdited: 31.08.2022
 tags: ["note-taking"]
 ---
 
-Our brain loves the internet. Each time we unearth a nugget of information, our brains lights up.
+I love the internet. Each time I unearth a nugget of information, my brains light up.
 
-We might bookmark the page, or favourite the post. But our hunger isn't satisfied and we rarely return to it. Our brains are info-junkies. We carry on scrolling.
+I might bookmark the page, or favourite the post. But my mind's hunger isn't satisfied and I rarely return to it. I'm an info-junky that suffers from shiny-object syndrome and I carry on scrolling.
 
 My intuitive brain loves creating connections, integrating knowledge and sparking lightbulb moments. I want to harness this super-power and I think I've found how.
 
 ## Taking notes on new observations
 
-When I read something thought provoking or hear something interesting, I'm going to stop and <a href="./making-the-most-of-observations">make the most of observations</a> by taking notes.
+When I read something thought provoking or hear something interesting, I stop and <a href="./making-the-most-of-observations">make the most of observations</a> by taking notes.
 
-By making a conscious decision to act on new information, we can prevent being sucked into an infinite scroll and turn insight into action.
+By making a conscious decision to act on new information, I can prevent being sucked into an infinite scroll and turn insight into action.
 
 But why are these notes so useful?
 
 ## A wiser way of working
 
-Note taking becomes more powerful if we reflect on what we've learned.
+Note taking becomes more powerful if we reflect on what we learn.
 
 Information is merely refined data. Knowledge, on the other hand, comes from awareness and understanding based on our own experiences.
 
-By exploring how our new information helps us see the world in a different light, we can upgrade our notes to a more personal and useful artifact.
+By exploring how our observations help us see the world in a different light, notes can be uplifted to a more personal and useful artifact.
 
-Once we have this knowledge, we can use it to affect future decisions and behaviour.
+Once we aquire knowledge, we can use it to affect future decisions and behaviour.
 
 So, here's my plan to remember and act on new information.
 
 ## Create a digital garden
 
-As opposed to a blog, which is typically a reverse-chronological list of published articles, I'm advocating creating a digital garden.
+As opposed to a blog, which is typically a reverse-chronological list of published articles, I'm creating a digital garden.
 
-A digital garden is a bunch of interconnected notes and essays that readers can peruse through links. It's how we naturally browse the internet.
+A digital garden is a bunch of interconnected notes and essays.
 
-Each time I find something interesting on the internet. I'm going to stop and make some notes and plant them in my digital garden.
+Each time I find something interesting on the internet, I will plant my notes as seeds in my digital garden.
 
-Sowing the seeds of ideas in pure note form can be the end of it. Or notes can be nutured into more rounded reflective essays over time.
+Now, this can be a one-off action. After all, not all seeds germinate and lie dormant. But I can return to my garden to cultivate, tend to and iterate on the ideas. Notes can be nutured into more rounded reflective essays over time.
 
-How many times have you avoided showing rough versions of your work, hiding mistakes, making it harder to finish what you've started?
-
-Done is better than perfect.
-
-But how do we retain and remember that information?
+Using spaced repetition is a great way to remember what you learn after all.
 
 ## Returning to tend to the garden
 
-Using spaced repetition is a great way to remember what you learn.
-
 Explaining core ideas and how they relate to each other in plain language so that others can understand them is a great way to make sure that one truly understands a subject.
 
-By regularly returning to read and <a href="./the-perfect-post">transforming notes for others to read</a>, we strenghen the ideas and reenforce that knowledge.
+By regularly returning to read and iterate on our notes and changing them into a <a href="./how-to-create-the-perfect-post">useful document for others</a> to read, ideas can be strengthened and knowledge re-enforced.
 
-And publishing the notes and essays opens them up to the opportunity for feedback and further improvement.
+Publishing essays and asking for feedback, cross-pollinates ideas with the community. Articles can be revised and refined further overtime. Content becomes evergreen and matures into well-structured prose.
 
-Because we keep coming back to the notes and refining them, you not only retain this new information better but by understanding and reflecting on new information, you can build knowledge, form new mental models and apply this knowledge to future decisions.
+Because ideas are reflected and iterated on, information is not only retained but new mental models are created and can be applied to future decisions. This wisdom is the bounty I hope to harvest.
