--- a/src/pages/thoughts/making-the-most-of-observations.mdx
+++ b/src/pages/thoughts/making-the-most-of-observations.mdx
@@ -6,12 +6,8 @@ lastEdited: 31.08.2022
 tags: ["note-taking"]
 ---
 
-## What have you heard/read/talked about today?
-
-## What does that mean?
-
-## What observations can you make notes on?
-
-## What insight can you find in that observation?
-
-## Turn insights into posts
+- What have you heard/read/talked about today?
+- What does that mean?
+- What observations can you make notes on?
+- What insight can you find in that observation?
+- <a href="./how-to-create-the-perfect-post">Turn insights into posts</a>
