adding experiment and new note

--- a/src/pages/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/pages/thoughts/taking-notes-to-the-next-level.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/Layout.astro
 title: Taking notes to the next level
 description: Using a digital garden for cultivating wisdom
-lastEdited: 31.08.2022
+lastEdited: 08.09.2022
 tags: ["note-taking"]
 ---
 
@@ -48,7 +48,7 @@ Using spaced repetition is a great way to remember what you learn after all.
 
 Explaining core ideas and how they relate to each other in plain language so that others can understand them is a great way to make sure that one truly understands a subject.
 
-By regularly returning to read and iterate on our notes and changing them into a <a href="./how-to-create-the-perfect-post">useful document for others</a> to read, ideas can be strengthened and knowledge re-enforced.
+By regularly returning to edit and iterate notes into <a href="./how-to-create-the-perfect-post">useful documents for others</a>, ideas can be strengthened and knowledge re-enforced.
 
 Publishing essays and asking for feedback, cross-pollinates ideas with the community. Articles can be revised and refined further overtime. Content becomes evergreen and matures into well-structured prose.
 
