--- a/src/pages/thoughts/how-to-create-the-perfect-post.mdx
+++ b/src/pages/thoughts/how-to-create-the-perfect-post.mdx
@@ -3,7 +3,7 @@ layout: ../../layouts/Layout.astro
 title: How to create the perfect post
 description: How to turn insight into a social media post
 lastEdited: 1.09.2023
-tags: ["note-taking"]
+tags: ["writing"]
 ---
 
 Some notes on creating social media posts.
@@ -11,7 +11,7 @@ Some notes on creating social media posts.
 - What is the outcome _you_ want?
 - How do you want your audience to feel?
 - What's the problem you're solving?
-- What's the story?
+- What's the story? (insight and emotion)
 
 Stories resonate far more than information.
 
