--- a/src/pages/thoughts/how-to-write-articles.mdx
+++ b/src/pages/thoughts/how-to-write-articles.mdx
@@ -3,7 +3,7 @@ layout: ../../layouts/Layout.astro
 title: How to write articles
 description: A process for writing more structured content
 lastEdited: 8.09.2022
-tags: ["note-taking"]
+tags: ["writing"]
 ---
 
 ## Step 1
