--- a/src/pages/thoughts/making-the-most-of-observations.mdx
+++ b/src/pages/thoughts/making-the-most-of-observations.mdx
@@ -3,7 +3,7 @@ layout: ../../layouts/Layout.astro
 title: Making the most of observations
 description: Where to find inspiration for notes
 lastEdited: 31.08.2022
-tags: ["note-taking"]
+tags: ["writing"]
 ---
 
 - What have you heard/read/talked about today?
