--- a/src/pages/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/pages/thoughts/taking-notes-to-the-next-level.mdx
@@ -3,12 +3,12 @@ layout: ../../layouts/Layout.astro
 title: Taking notes to the next level
 description: Using a digital garden for cultivating wisdom
 lastEdited: 08.09.2022
-tags: ["note-taking"]
+tags: ["writing"]
 ---
 
-I love the internet. Each time I unearth a nugget of information, my brains light up.
+I love the internet. Each time I unearth a nugget of information, my brain lights up.
 
-I might bookmark the page, or favourite the post. But my mind's hunger isn't satisfied and I rarely return to it. I'm an info-junky that suffers from shiny-object syndrome and I carry on scrolling.
+I might bookmark the page, or favourite the post. But my thirst isn't satisfied and I rarely return to it. I'm an info-junky that suffers from shiny-object syndrome and I carry on scrolling.
 
 My intuitive brain loves creating connections, integrating knowledge and sparking lightbulb moments. I want to harness this super-power and I think I've found how.
 
