--- a/src/pages/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/pages/thoughts/taking-notes-to-the-next-level.mdx
@@ -8,15 +8,15 @@ tags: ["writing"]
 
 I love the internet. Each time I unearth a nugget of information, my brain lights up.
 
-I might bookmark the page, or favourite the post. But my thirst isn't satisfied and I rarely return to it. I'm an info-junky that suffers from shiny-object syndrome and I carry on scrolling.
+I might bookmark the page, or favourite the post. But rarely is my hunger sated. I carry on scrolling looking for the next morsel.
 
-My intuitive brain loves creating connections, integrating knowledge and sparking lightbulb moments. I want to harness this super-power and I think I've found how.
+Our brains love creating connections, finding patterns and having those lightbulb moments. I want to harness this super-power and I think I've found how.
 
 ## Taking notes on new observations
 
-When I read something thought provoking or hear something interesting, I stop and <a href="./making-the-most-of-observations">make the most of observations</a> by taking notes.
+When I read something thought provoking or hear something interesting, I now stop and <a href="./making-the-most-of-observations">make the most of this observation</a> by taking notes.
 
-By making a conscious decision to act on new information, I can prevent being sucked into an infinite scroll and turn insight into action.
+By making a conscious decision to act on new information, I prevent myself being sucked into the infinite scroll and turn insight into action.
 
 But why are these notes so useful?
 
@@ -42,7 +42,8 @@ Each time I find something interesting on the internet, I will plant my notes as
 
 Now, this can be a one-off action. After all, not all seeds germinate and lie dormant. But I can return to my garden to cultivate, tend to and iterate on the ideas. Notes can be nutured into more rounded reflective essays over time.
 
-Using spaced repetition is a great way to remember what you learn after all.
+<a href="./metacognition">Using spaced repetition</a> is a great way to remember
+what you learn after all.
 
 ## Returning to tend to the garden
 
